8301219: JavaFX crash when closing with the escape key 8087368: java runtime environment error when trying to execute showAndWait() function

Reviewed-by: kcr, tsayao